--- a/index.html
+++ b/index.html
@@ -84,15 +84,18 @@
         </div>
         <textarea name="name" id="input" cols="30" rows="1" placeholder="Please Enter Your Name Here" required></textarea>
         <div class="btns">
-            <!-- <button class="restart">Replay Quiz</button> -->
+            <!--  -->
             <button class="quit">Scoreboard</button>
         </div>
     </div>
     <!-- Scoreboard -->
-    <div class="scoreboard-box"></div>
-    <header>
-
-    </header>
+    <div class="scoreboard-box">
+        <div class="scoreboard-title">
+            <span>Scoreboard</span>
+        </div>
+        <ul class="scoreboard"></ul>
+        <button class="restart">Replay Quiz</button>
+    </div>
 
     <script src="questions.js"></script>
     <script src="script.js"></script>
