JS, CSS, HTML update

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="score-text">
             <span>You scored<p class="score">0</p> out of 120</span>
         </div>
-        <textarea name="name" id="input" cols="30" rows="1" placeholder="Please Enter Your Name Here" required></textarea>
+        <textarea name="name" id="input" cols="30" rows="1" placeholder="Please Enter Your Name Here"></textarea>
         <div class="btns">
             <!--  -->
             <button class="quit">Scoreboard</button>
@@ -94,7 +94,10 @@
             <span>Scoreboard</span>
         </div>
         <ul class="scoreboard"></ul>
-        <button class="restart">Replay Quiz</button>
+        <div class="scoreboard-btn">
+            <button class="restart">Replay Quiz</button>
+            <button class="clear">Clear</button>
+        </div>
     </div>
 
     <script src="questions.js"></script>
