Readme, Js, Css, Html updated

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 </head>
 
 <body>
-    <!-- start button -->
+    <!-- Page 1.- Start page -->
     <div class="start-btn">
         <button>Start Quiz</button>
     </div>
-    <!-- Info box -->
+    <!-- Page 2.- Info page -->
     <div class="info-box">
         <div class="info-title">
             <span>Some Rules of the Quiz</span>
@@ -25,17 +25,17 @@
         <div class="info-list">
             <div class="info">1. You will have <span>120 second</span> for the quiz.</div>
             <div class="info">2. Once answer is selected, cant be reselectd.</div>
-            <div class="info">3. Incorrect answer will subtract from the timer.</div>
-            <div class="info">4. Timer will only stop once all the quiz are answered.</div>
-            <div class="info">5. Points will be recorded with your name.</div>
+            <div class="info">3. Incorrect answer will subtract <span>20 seconds.<span></div>
+            <div class="info">4. Timer will only stop when all questions are answered.</div>
+            <div class="info">5. Good Luck, Have fun!</div>
         </div>
         <div class="info-button">
             <button class="quit">Exit Quiz</button>
-            <button class="restart">Continue</button>
+            <button class="restart">Start Quiz</button>
         </div>
     </div>
 
-    <!-- Quiz box -->
+    <!-- Page 3.- Question page -->
     <div class="quiz-box">
         <header>
             <div class="title">Code Quiz</div>
@@ -46,34 +46,31 @@
         </header>
         <section>
             <div class="quiz-text">
-                <!-- <span>_______ is the process of finding errors and fixing them within a program.</span> -->
             </div>
             <div class="option-list">
-                <div class="option">
+                <!-- option display fram work -->
+                <!-- <div class="option">
                     <span>A. Compiling</span>
-                    <div class="icon-tick"><i class="far fa-check-circle"></i></div>
-                </div>
-                <div class="option">
-                    <span>B. Executing</span>
-                    <div class="icon-cross"><i class="far fa-times-circle"></i></div>
-                </div>
-                <div class="option">
-                    <span>C. Scanning</span>
-                </div>
-                <div class="option">
-                    <span>D. Debugging</span>
-                </div>
+                <div class="icon-tick"><i class="far fa-check-circle"></i></div>
             </div>
+            <div class="option">
+                <span>B. Executing</span>
+                <div class="icon-cross"><i class="far fa-times-circle"></i></div>
+            </div>
+            <div class="option">
+                <span>C. Scanning</span>
+            </div>
+            <div class="option">
+                <span>D. Debugging</span>
+            </div> -->
+        </div>
         </section>
-
-        <!-- Quiz Footer -->
         <footer>
-            <!-- <button class="check-result">Check Result</button> -->
             <button class="next-btn">Next One</button>
         </footer>
     </div>
 
-    <!-- Result Box -->
+    <!-- Page 4. Result page -->
     <div class="result-box">
         <div class="icon">
             <i class="fas fa-trophy"></i>
@@ -84,11 +81,10 @@
         </div>
         <textarea name="name" id="input" cols="30" rows="1" placeholder="Please Enter Your Name Here"></textarea>
         <div class="btns">
-            <!--  -->
             <button class="quit">Scoreboard</button>
         </div>
     </div>
-    <!-- Scoreboard -->
+    <!-- Page 5. Scoreboard -->
     <div class="scoreboard-box">
         <div class="scoreboard-title">
             <span>Scoreboard</span>
